# cmake-compile-library

./: CMakeLists.txt  README.md  hello.cpp  hello.hpp  main.cpp
